--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "countries-and-timezones": "^3.3.0",
     "country-flags-svg": "^1.1.1",
     "dotenv": "^10.0.0",
